<resources>
    <string name="app_name">MasterQ</string>
    <string name="coins">coins</string>
    <string name="_1">1-</string>
    <string name="_2">2-</string>
    <string name="_3">3-</string>
    <string name="_4">4-</string>
    <string name="_5">5-</string>
    <string name="topics">Topics</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have account</string>
    <string name="login_with_your_account">Login with your account</string>
    <string name="signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Wrong">Wrong</string>
    <string name="Right">Right</string>
    <string name="the_quick_brown_fox_jump_over_the_lazy_dog">The quick brown fox jump over the lazy dog</string>
    <string name="login">Login</string>
    <string name="let_s_play">Lets play!</string>
    <string name="loreum_ipsum">Lorem ipsum dolor sit amet, consectetur ` adipiscing elit. Mom ipsum dolort, consectetur ` adipiscing et, consectetur ` adipiscing e sit amet, consectetur ` adipiscing elit. Morbi turpis purrbi turpis purus, dap ibus eget nisi vitae, finibus mollis justo. Ut facilisis sem ut nibh pellentesque con vallis. Mauris eget tristique Read more</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_1n">1</string>
    <string name="_2n">2</string>
    <string name="_3n">3</string>
    <string name="_4n">4</string>
    <string name="_5n">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_20">20</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="congratulation">Congratulation!</string>
    <string name="r_e_s_u_l_t">R E S U L T</string>
    <string name="s_c_o_r_e">S C O R E</string>
    <string name="result">Result</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="what_this_quiz_is_about">What this quiz is about?</string>
    <string name="No_option_selected">No option selected</string>
    <string name="what_do_you_feel_about_using_our_app">What do you feel
        using our app?</string>
    <string name="rate_us_on_playstore">Rate us on Playstore</string>
    <string name="remind_me_later">Remind me Later</string>
    <string name="new_topic_will_be_added_next_weak">New topic will be added next weak</string>
    <string name="categories">Categories</string>
</resources>