<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".SignupActivity">

    <!--    xmlns:tools="http://schemas.android.com/tools"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_a_new_account"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="Name"
            android:background="@color/purple_200"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="6dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/emailBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="Email"
            android:background="@color/purple_200"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="6dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="Name"
            android:background="@color/purple_200"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="6dp"
            android:elevation="10dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/purple_200"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/signinBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/purple_200"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>