<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color_background"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:background="@color/color_on_bg"
            app:lottie_rawRes="@raw/rating_star" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/what_do_you_feel_about_using_our_app"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/smile_rating"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/rateOnStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/rate_us_on_playstore"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/white"/>

        <android.widget.Button
            android:id="@+id/remindLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_unfocused"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/remind_me_later"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>